--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,11 +4,21 @@
       <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo"/>
     </p>
     <mat-card-content>
-      <mat-card-title translate>Hello world !</mat-card-title>
+      <mat-card-title translate>Bem vinda ao apoiAME, a plataforma que xyz</mat-card-title>
       <mat-card-subtitle>
-        <app-loader [isLoading]="isLoading" size="1.5"></app-loader>
-        <q [hidden]="isLoading">{{quote}}</q>
+        <p>Aqui voce pode se conectar com outras empreendedoras, acesse o mapa abaixo para saber sobre empreendimentos disponiveis</p>
+      
       </mat-card-subtitle>
+      <agm-map 
+[latitude]="latitude" 
+[longitude]="longitude" 
+[zoom]="zoom" >
+  <agm-marker 
+  [latitude]="latitude" 
+  [longitude]="longitude"></agm-marker>
+</agm-map>
     </mat-card-content>
   </mat-card>
+
+  
 </div>
