--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,10 +2,12 @@
   <mat-card>
     <h1>
       <mat-card-title translate>APP_NAME</mat-card-title>
+    
     </h1>
     <mat-card-content>
-      <mat-icon>code</mat-icon>
-      <span translate>Version</span> {{version}}
+      <p> Quer aprender mais sobre empreendedorismo? confira os recursos indicados abaixo </p>
+      <p> lista de cursos vindos da API aqui </p>
     </mat-card-content>
   </mat-card>
+
 </div>
