--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -7,13 +7,13 @@
   </div>
   <div fxHide.lt-md>
     <a class="brand" href="https://github.com/ngx-rocket" translate>APP_NAME</a>
-    <button mat-button routerLink="/home" routerLinkActive="active">
+    <button mat-button routerLink="/regiao" routerLinkActive="active">
       <mat-icon>home</mat-icon>
-      <span translate>Home</span>
+      <span translate>Na sua regiao</span>
     </button>
     <button mat-button routerLink="/about" routerLinkActive="active">
       <mat-icon>info</mat-icon>
-      <span translate>About</span>
+      <span translate>Conteudos</span>
     </button>
   </div>
   <span fxFlex></span>
