--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,14 +9,21 @@
         <p>Aqui voce pode se conectar com outras empreendedoras, acesse o mapa abaixo para saber sobre empreendimentos disponiveis</p>
       
       </mat-card-subtitle>
-      <agm-map 
-[latitude]="latitude" 
-[longitude]="longitude" 
-[zoom]="zoom" >
-  <agm-marker 
-  [latitude]="latitude" 
-  [longitude]="longitude"></agm-marker>
-</agm-map>
+      <div class="container">
+
+
+  <div class="form-group">
+    <label>Insira um endereco para busca de empreendedoras</label>
+    <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Busque empreendedoras, postos sebrae" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
+  </div>
+
+  <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+    <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+      (dragEnd)="markerDragEnd($event)"></agm-marker>
+  </agm-map>
+
+ 
+</div>
     </mat-card-content>
   </mat-card>
 
