adicionando secao de contatos

--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -13,6 +13,9 @@
             <span translate>Conteudos</span>
           </a>
           <mat-divider></mat-divider>
+          <a mat-list-item routerLink="/contacts" routerLinkActive="active" (click)="sidenav.close()">
+            <span translate>Contatos</span>
+          </a>
         </mat-list>
       </nav>
     </mat-sidenav>
