--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -15,6 +15,10 @@
       <mat-icon>info</mat-icon>
       <span translate>Conteudos</span>
     </button>
+    <button mat-button routerLink="/contacts" routerLinkActive="active">
+      <mat-icon>call</mat-icon>
+      <span translate>contatos</span>
+    </button>
   </div>
   <span fxFlex></span>
   <app-language-selector icon="true"></app-language-selector>
