--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,7 +1,10 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
   <div>
-    <h1 fxLayoutAlign="center" translate>APP_NAME</h1>
+    <h3>CONEXÃO QUE TRANSFORMA</h3>
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
+      <p>
+        <img class="logo" src="assets/ngx-rocket-logo@192.png" alt="angular logo"/>
+      </p>
     </div>
   </div>
   <div class="login-container" fxLayout="row" fxLayoutAlign="center">
@@ -31,6 +34,10 @@
           <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading">
             <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
             <span translate>Entrar</span>
+          </button>
+          <button mat-stroked-button color="primary" routerLink="/create" routerLinkActive="active">
+            <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
+            <span translate>Se cadastrar</span>
           </button>
         </div>
       </form>
