logos e botao de cadastro

--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -3,7 +3,7 @@
     <h3>CONEXÃO QUE TRANSFORMA</h3>
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
       <p>
-        <img class="logo" src="assets/ngx-rocket-logo@192.png" alt="angular logo"/>
+        <img class="logo" src="assets/Asset-5.png" alt="angular logo"/>
       </p>
     </div>
   </div>
