--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-card>
     <p>
-      <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo"/>
+      <img class="logo" src="assets/Asset-5.png" alt="angular logo"/>
     </p>
     <mat-card-content>
       <mat-card-title translate>Bem vinda ao apoiAME, a plataforma que xyz</mat-card-title>
