--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,9 +1,9 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
   <div>
-    <h3>CONEXÃO QUE TRANSFORMA</h3>
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
       <p>
-        <img class="logo" src="assets/Asset-5.png" alt="angular logo"/>
+        <img class="logo" src="assets/logo.jpeg" alt="angular logo"/>
+        <br> Conexao que transforma
       </p>
     </div>
   </div>
