Alteração da cor

--- a/src/app/cursos/home.html
+++ b/src/app/cursos/home.html
@@ -11,9 +11,9 @@
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
   <style>
     .pink{
-      background-color: #ff99aa;
+      background-color: #0F4C81;
       border-style: solid;
-      border-color: #ff99aa
+      border-color:  #0F4C81;
     }
   </style>
 </head>
