tabela de listagem de vagas

--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -3,7 +3,7 @@
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
       <p>
         <img class="logo" src="assets/logo.jpeg" alt="angular logo"/>
-        <br> Conexao que transforma
+        <br> Conexão que transforma
       </p>
     </div>
   </div>
