--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,27 @@
 <div class="container">
   <mat-card>
     <p>
-      <img class="logo" src="assets/logo.jpeg" alt="angular logo"/>
+      <img class="logo" src="assets/logonew.png" alt="angular logo"/>
     </p>
     <mat-card-content>
-      <mat-card-title translate>Bem vinda ao apoiAME, a plataforma que xyz</mat-card-title>
+      <mat-card-title translate>Bem vinda a apoiAme, a plataforma formada por uma rede de conexão <br>
+      entre mulheres empreendedoras e mulheres em busca de uma oportunidade <br>
+    para reconstruirem suas vidas</mat-card-title>
       <mat-card-subtitle>
-        <p>Aqui voce pode se conectar com outras empreendedoras, acesse o mapa abaixo para saber sobre empreendimentos disponiveis</p>
+        <p>Insira um endereço para busca de empreendedoras, oportunidades para transformar <br>
+          a sua vida e postos do Sebrae</p>
       
       </mat-card-subtitle>
       <div class="container">
 
 
   <div class="form-group">
-    <label>Insira um endereco para busca de empreendedoras</label>
+  <h3>  <label></label> </h3>
     <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Busque empreendedoras, postos sebrae" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
   </div>
-
+<br>
+<br>
+<br>
   <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
     <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
       (dragEnd)="markerDragEnd($event)"></agm-marker>
@@ -24,8 +29,59 @@
 
  
 </div>
-    </mat-card-content>
-  </mat-card>
 
-  
+<h3> Veja abaixo as vagas disponíveis na nossa plataforma</h3>
+
+<mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+</mat-form-field>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef> address </th>
+    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="area">
+    <th mat-header-cell *matHeaderCellDef> area </th>
+    <td mat-cell *matCellDef="let element"> {{element.area}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="companyName">
+    <th mat-header-cell *matHeaderCellDef> companyName </th>
+    <td mat-cell *matCellDef="let element"> {{element.companyName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="job">
+    <th mat-header-cell *matHeaderCellDef> job </th>
+    <td mat-cell *matCellDef="let element"> {{element.job}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="jobDescription">
+    <th mat-header-cell *matHeaderCellDef> jobDescription </th>
+    <td mat-cell *matCellDef="let element"> {{element.jobDescription}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  <!-- Row shown when there is no matching data. -->
+  <tr class="mat-row" *matNoDataRow>
+    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+  </tr>
+</table>
+    </mat-card-content>
+
+  </mat-card>
+ 
+
 </div>
+
+
