listagem de conteudos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
 <h3> Veja abaixo as vagas disponíveis na nossa plataforma</h3>
 
 <mat-form-field>
-  <mat-label>Filter</mat-label>
+  <mat-label>Digite uma vaga de seu interesse </mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
 </mat-form-field>
 
