--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,8 +6,38 @@
     </h1>
     <mat-card-content>
       <p> Quer aprender mais sobre empreendedorismo? confira os recursos indicados abaixo </p>
-      <p> lista de cursos vindos da API aqui </p>
-
+  
+      <mat-form-field>
+        <mat-label>Busque um conteudo de seu interesse </mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+      </mat-form-field>
+      
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef> title </th>
+          <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef> description </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="link">
+          <th mat-header-cell *matHeaderCellDef> link </th>
+          <td mat-cell *matCellDef="let element"> {{element.link}} </td>
+        </ng-container>
+      
+        
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+      </table>
   
     </mat-card-content>
   </mat-card>
